纠正一些错别字

--- a/docs/07.排序.md
+++ b/docs/07.排序.md
@@ -409,7 +409,7 @@ def shell_sort(arr):
 
 
 
-# 时间复杂度为 O(nlogn) 的三种排序算法
+# 时间复杂度为 O(nlogn) 的两种排序算法
 
 **归并排序**和**快速排序**是时间复杂度为 O(nlogn) 的排序算法，这两种排序算法适合大规模的数据排序，比时间复杂度为 $O(n^2)$ 的排序算法要更常用。
 
