添加bfs和dfs的python对应代码

--- a/docs/07.排序.md
+++ b/docs/07.排序.md
@@ -803,7 +803,7 @@ def partition(arr: list, p, r):
 
 ### 快速排序的性能分析
 
-快排并不占用额外的内存空间，所以快排是一种稳定的排序算法。
+快排并不占用额外的内存空间，所以快排是一种原地排序算法。
 
 快排的分区过程涉及交换操作，相同元素先后顺序会发生改变、所以快排是一种不稳定的排序算法。
 
