--- a/docs/24.回溯算法.md
+++ b/docs/24.回溯算法.md
@@ -18,7 +18,7 @@
 
 有一个 8x8 的棋盘，希望往里放 8 个棋子（皇后），每个棋子所在的行、列、对角线都不能有另一个棋子。
 
-下图中左图是满足条件的一种方法，又图是不满足条件的。八皇后问题就是期望找到所有满足这种要求的放棋子方式：
+下图中左图是满足条件的一种方法，右图是不满足条件的。八皇后问题就是期望找到所有满足这种要求的放棋子方式：
 
 ![1570503806038](imgs/2/1570503806038.png)
 
