--- a/docs/25.动态规划.md
+++ b/docs/25.动态规划.md
@@ -312,7 +312,7 @@ def double11advance(items_info: list, w: int):
     states[0][0] = True
     states[0][items_info[0]] = True
     for i in range(1, n):
-        for j in range(3 * w + 1):
+        for j in range(3 * w + 1): 这里应该倒序
             if states[i - 1][j]:
                 # 不购买第i个商品
                 states[i][j] = states[i - 1][j]
@@ -768,6 +768,8 @@ def lwst_dp(a: str, b: str) -> int:
                                   tmp)
     return min_edist[-1][-1]
 ```
+
+> [72. 编辑距离 - 力扣（LeetCode）](https://leetcode.cn/problems/edit-distance/) 参考这题的解法
 
 
 
