统一了bfs和dfs的python实现，修改了一些代码上的bug

--- a/docs/18.深度和广度优先搜索.md
+++ b/docs/18.深度和广度优先搜索.md
@@ -87,13 +87,13 @@ version: 1.0.0
 '''
 # coding=utf-8
 # 使用邻接链表表示一个图
-# 结点V的取值1<=v<=n
+# 结点V的取值0<=v<=n-1
 
-## 邻接链表使用【值】为【集合】的【字典】实现
+## 1. 邻接链表使用【值】为【集合】的【字典】实现
 class GraphviaList:
     def __init__(self, Vnum: int):
         self.Vnum = Vnum
-        self.linkList = {v: set() for v in range(1, Vnum+1)}
+        self.linkList = {v: set() for v in range(Vnum)}
 
     def addEdge(self, v1: int, v2: int) -> None:
         # 添加v2到v1对应的邻接链表中
@@ -110,7 +110,7 @@ class ListNode:
 class GraphviaListNode:
     def __init__(self, Vnum: int) -> None:
         self.Vnum = Vnum
-        self.linkList = {v: ListNode(None) for v in range(1, Vnum+1)}
+        self.linkList = {v: ListNode(None) for v in range(Vnum)}
 
     def addEdge(self, v1: int, v2: int) -> None:
         # 添加v2到v1对应的邻接链表中
@@ -127,8 +127,9 @@ class GraphviaListNode:
 
 if __name__ == '__main__':
     # 构建一个图
-    Vnum = 6
-    edges = [[1, 2], [1, 3], [3, 5], [3, 4], [2, 6]]
+    Vnum = 8
+    edges = [[0, 1], [0, 3], [3, 4], [1, 4], [1, 2],
+             [4, 5], [4, 6], [2, 5], [6, 7], [5, 7]]
     G1 = GraphviaList(Vnum)
     G2 = GraphviaListNode(Vnum)
     for v1, v2 in edges:
@@ -191,55 +192,50 @@ private void print(int[] prev, int s, int t) { // 递归打印 s->t 的路径
 }
 ```
 
-
-
 ```python
-# python
-# coding=utf-8
-from typing import List, Optional
+## python，基于队列实现bfs，
+_author_='yjiedu'
 import queue
-_author_ = 'yjiedu'
 
-def bfs(G: Graph, s: int, t: int) -> List[int]:
-    Vnum = G.V  # 顶点数目
-    linkedList = G.linkedList
-    visits = [0]*Vnum
-    preV = [-1]*Vnum  # 第一个顶点的前置顶点为-1
-    q = queue.Queue()
-    q.put(s)  # 放置开始节点到队列
+def bfs(G: Optional[GraphviaList], start: int, end: int) -> List[int]:
+    Vnum = G.Vnum
+    visited = [False]*Vnum  # 记录结点是否被访问，结点从0开始编码
+    pre = [-1]*Vnum # 记录结点的前导结点
 
-    flag = True  # 找到目标点的标志位
-    while (not q.empty()) and flag:
-        pos = q.get()  # 从队列中取出一个顶点
-        # 遍历当前顶点的相邻顶点
-        if visits[pos] == 0:  # 当前顶点没有被访问过
-            reader = linkedList[pos]
-            visits[pos] = 1
-            while reader.next:  # 遍历当前顶点的邻接表
-                if visits[reader.next.val] == 1:
-                    reader = reader.next
+    # 执行函数
+    def bfsFun(start: int) -> None:
+        nonlocal end, G, visited, pre
+        que = queue.Queue()
+        que.put(start)
+        while not que.empty():
+            v = que.get()
+            if visited[v]:  # 跳过已经遍历的结点
+                continue
+            visited[v] = True  # 标记已经经过的结点
+            linkList = G.linkList[v]
+            for v1 in linkList:
+                if visited[v1]:
                     continue
-                preV[reader.next.val] = pos  # 存储前置顶点
-                # visits[reader.next.val] = 1
-                if reader.next.val == t:  # 找到目标顶点
-                    preV[t] = pos
-                    flag = False  # 找到
-                    break
-                else:
-                    q.put(reader.next.val)  # 把相邻节点加入队列
+                pre[v1] = v
+                if v1 == end:  # 找到目标点就停止
+                    return
+                que.put(v1)  # 把下一层的结点放入队列
 
-                reader = reader.next
+    bfsFun(start)  # 使用bfs从start找目标结点end
 
-    # 输出s到t的最短路径
-    path = []
-    i = t
-    while i != s:
-        path.append(i)
-        i = preV[i]
-    path.append(s)
-
-    return path[::-1]
+    if pre[end] == -1: # 没找到终点
+        return -1
+    else: # 找到终点，从终点利用前导结点，回推到开始结点
+        path = [end]
+        pos = end
+        while pre[pos] != start:
+            pos = pre[pos]
+            path.append(pos)
+        path.append(start)
+        return path[::-1] # 翻转回推路径
 ```
+
+
 
 广度优先搜索过程分解图：
 
@@ -251,96 +247,7 @@ def bfs(G: Graph, s: int, t: int) -> List[int]:
 
 广度优先搜索的空间消耗主要在辅助变量 visited 数组、queue 队列、prev 数组上。这三个存储空间的大小都不会超过顶点的个数，所以空间复杂度是 O(V)。
 
-```python
-## bfs 全流程
-# python
-# coding=utf-8
-from typing import List, Optional
-import queue
-_author_ = 'yjiedu'
 
-# 定义链表用于存储邻接表
-class ListNode:
-    def __init__(self, val=None, next=None) -> None:
-        self.val = val
-        self.next = next
-
-
-# 定义无向图
-class Graph:
-    def __init__(self, V: int = 0) -> None:
-        self.V = V  # 顶点个数
-        self.linkedList = []
-        for _ in range(V):  # 初始化所有顶点邻接表的表头
-            self.linkedList.append(ListNode(None))
-
-    # 添加边：把边两边顶点分别加入彼此的邻接表中，顶点的下标惟一确定顶点的邻接表
-    def addEdge(self, s: int, t: int) -> None:
-        # 把t放置在s链表的尾部
-        reader = self.linkedList[s]
-        while reader.next:  # 找到链表尾部
-            reader = reader.next
-        reader.next = ListNode(val=t)
-        # 把s放置在t链表的尾部
-        reader = self.linkedList[t]
-        while reader.next:  # 找到链表尾部
-            reader = reader.next
-        reader.next = ListNode(val=s)
-
-# 给定图G，开始端点s， 终点t，每个边的距离都为1，输出s到t的最短路径（不止一个）
-
-
-def bfs(G: Graph, s: int, t: int) -> List[int]:
-    Vnum = G.V  # 顶点数目
-    linkedList = G.linkedList
-    visits = [0]*Vnum
-    preV = [-1]*Vnum  # 第一个顶点的前置顶点为-1
-    q = queue.Queue()
-    q.put(s)  # 放置开始节点到队列
-
-    flag = True  # 找到目标点的标志位
-    while (not q.empty()) and flag:
-        pos = q.get()  # 从队列中取出一个顶点
-        # 遍历当前顶点的相邻顶点
-        if visits[pos] == 0:  # 当前顶点没有被访问过
-            reader = linkedList[pos]
-            visits[pos] = 1
-            while reader.next:  # 遍历当前顶点的邻接表
-                if visits[reader.next.val] == 1:
-                    reader = reader.next
-                    continue
-                preV[reader.next.val] = pos  # 存储前置顶点
-                # visits[reader.next.val] = 1
-                if reader.next.val == t:  # 找到目标顶点
-                    preV[t] = pos
-                    flag = False  # 找到
-                    break
-                else:
-                    q.put(reader.next.val)  # 把相邻节点加入队列
-
-                reader = reader.next
-
-    # 输出s到t的最短路径
-    path = []
-    i = t
-    while i != s:
-        path.append(i)
-        i = preV[i]
-    path.append(s)
-
-    return path[::-1]
-
-
-if __name__ == '__main__':
-    G = Graph(V=8)
-    edges = [[0, 1], [1, 2], [0, 3], [1, 4], [2, 5],
-             [3, 4], [4, 5], [4, 6], [5, 7], [6, 7]]
-    for edge in edges:
-        G.addEdge(edge[0], edge[1])
-
-    path = bfs(G, 0, 6)
-    print(path)
-```
 
 ```python
 '''
@@ -348,7 +255,7 @@ Author: yjiedu(yjiedu@foxmail)
 Date: 2022-11-14 00:43:47
 LastEditors: yjiedu@office
 LastEditTime: 2022-11-14 01:31:01
-Description: 
+Description:  BFS的python实现的全流程
 version: 1.0.0
 '''
 # coding=utf-8
@@ -370,12 +277,12 @@ class GraphviaList:
 
 
 def bfs(G: Optional[GraphviaList], start: int, end: int) -> List[int]:
-    Vnum = G.Vnum
-    visited = [False]*Vnum  # 结点从0开始编码
-    pre = [-1]*Vnum
+    Vnum = G.Vnum # 图中结点数
+    visited = [False]*Vnum  # 记录结点是否被访问，结点从0开始编码
+    pre = [-1]*Vnum # 记录结点的前导结点
 
-    # 递归函数
-    def recurBfs(start: int) -> None:
+    # 执行函数
+    def bfsFun(start: int) -> None:
         nonlocal end, G, visited, pre
         que = queue.Queue()
         que.put(start)
@@ -393,11 +300,11 @@ def bfs(G: Optional[GraphviaList], start: int, end: int) -> List[int]:
                     return
                 que.put(v1)  # 把下一层的结点放入队列
 
-    recurBfs(start)  # 使用bfs从start找目标结点end
+    bfsFun(start)  # 使用bfs从start找目标结点end
 
-    if pre[end] == -1:
+    if pre[end] == -1: # 没找到
         return -1
-    else:
+    else: # 找到终点，从终点利用前导结点，回推到开始结点
         path = [end]
         pos = end
         while pre[pos] != start:
@@ -415,6 +322,7 @@ if __name__ == '__main__':
     G = GraphviaList(Vnum)
     for v1, v2 in edges:
         G.addEdge(v1, v2)
+    # 输出开始结点到目标结点的路径
     print(bfs(G, 0, 6))
 ```
 
@@ -473,7 +381,7 @@ Author: yjiedu(yjiedu@foxmail)
 Date: 2022-11-14 00:43:47
 LastEditors: yjiedu@office
 LastEditTime: 2022-11-14 01:32:16
-Description: 
+Description: 基于递归的dfs的python实现全流程
 version: 1.0.0
 '''
 
@@ -501,12 +409,10 @@ def dfs(G: Optional['GraphviaList'], start: int, end: int) -> List[int]:
     # 递归函数
     def recurDfs(start: int) -> None:
         nonlocal G, end, flag, pre, visited
-        if flag:
-            return
         linkList = G.linkList[start]
         visited[start] = True
         for v in linkList:
-            if flag:  # 每个结点都会有一个分支，因此在这里也应该做停止监测
+            if flag:  # 每个结点都会有一个分支，因此在这里应该做停止监测
                 return
             if visited[v]:  # 跳过已经被访问过的结点
                 continue
